ops/k8s/tekeche-web/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekeche-web
  namespace: tekeche
spec:
  type: ClusterIP
  selector:
    app: tekeche-web
  ports:
    - port: 8080
      targetPort: 8080
